<resources>
    <string name="app_name">Guardia_App</string>
    <string name="placeholder">Username</string>
    <string name="lbl_darkmode">Dark Mode</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_userOptions">User Options</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_categories">Categories</string>
    <string name="lbl_goals">Goals</string>
    <string name="lbl_awards">Awards</string>
</resources>