<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Main_Dashboard">

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_notifications"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/notification_bell_dark_mode"
            android:contentDescription="@string/lbl_notifications"

            android:background="@color/black"

            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp">

        </ImageButton>

        <ImageButton
            android:id="@+id/btn_userOptions"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="#eccbcb"
            android:contentDescription="@string/lbl_userOptions"

            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </ImageButton>

        <ImageButton
            android:id="@+id/btn_darkMode"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/lbl_darkmode"

            android:src="@drawable/dark_mode_switch_dark_mode"

            android:background="@color/black"

            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="20dp">
        </ImageButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp">

        <LinearLayout
            android:id="@+id/dashboardContents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:background="@drawable/rounded_bg"
                android:textColor="#eccbcb"
                android:text="@string/app_name"
                android:gravity="center"
                android:layout_marginBottom="20sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:background="@drawable/rounded_bg"
                android:textColor="#eccbcb"
                android:text="@string/app_name"
                android:gravity="center"
                android:layout_marginBottom="20sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp">
            </TextView>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNav"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bar_background"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="10sp">
        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/setting_icon_dark_mode"
            android:background="#410B0B"

            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"

            android:contentDescription="@string/lbl_settings">
        </ImageButton>
        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:src="@drawable/home_icon_dark_mode"
            android:background="#410B0B"

            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_settings"
            app:layout_constraintEnd_toStartOf="@id/btn_add_expenses"

            android:contentDescription="@string/lbl_categories">
        </ImageButton>
        <ImageButton
            android:id="@+id/btn_add_expenses"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:src="@drawable/add_button_dark_mode"
            android:background="#410B0B"

            android:scaleX="0.75"
            android:scaleY="0.75"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:contentDescription="@string/lbl_home">
        </ImageButton>
        <ImageButton
            android:id="@+id/btn_goals"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:src="@drawable/goal_icon_dark_mode"
            android:background="#410B0B"


            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_add_expenses"
            app:layout_constraintEnd_toStartOf="@id/btn_awards"

            android:contentDescription="@string/lbl_goals">
        </ImageButton>
        <ImageButton
            android:id="@+id/btn_awards"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:src="@drawable/award_icon_dark_mode"
            android:background="#410B0B"


            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="20dp"

            android:contentDescription="@string/lbl_awards">
        </ImageButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>